--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -48,3 +48,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/hashicorp/hcl2"
+
+[[constraint]]
+  name = "github.com/spf13/cobra"
+  version = "0.0.4"
