--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -52,3 +52,7 @@
 [[constraint]]
   name = "github.com/spf13/cobra"
   version = "0.0.4"
+
+[[constraint]]
+  name = "github.com/fatih/color"
+  version = "1.7.0"
