--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,7 @@
+before:
+  hooks:
+    - go mod download
+    - go generate ./...
 builds:
   - env:
       - CGO_ENABLED=0
@@ -11,3 +15,4 @@ archives:
       - none*
 changelog:
   skip: true
+release:
